--- a/src/app/releases/details/release.download.modal.pug
+++ b/src/app/releases/details/release.download.modal.pug
@@ -38,7 +38,7 @@ include ../../template/_mixins
 					label(for="includePlayfieldImage") Include playfield shots
 				p
 					//- todo show all videos if more than one
-					input#includePlayfieldVideo.checkbox--toggle(type="checkbox", ng-model="vm.downloadRequest.playfield_video[0]")
+					input#includePlayfieldVideo.checkbox--toggle(type="checkbox", ng-model="vm.downloadRequest.playfield_videos[0]")
 					label(for="includePlayfieldVideo")
 					label(for="includePlayfieldVideo") Include playfield videos
 
