--- a/src/styles/jumbotron.styl
+++ b/src/styles/jumbotron.styl
@@ -81,7 +81,7 @@
 				top 60px
 
 		> .panel
-			background-color $color-lighter-inv
+			background-color rgba(0,0,0,0.35)
 
 			.container
 				margin-top 75px
@@ -113,7 +113,7 @@
 		> .panel
 			padding-left 50px
 			padding-right 50px
-			background-color $color-lightest-inv
+			background-color rgba(0,0,0,0.55)
 
 			h3
 				margin-top 40px
