--- a/src/styles/modals.styl
+++ b/src/styles/modals.styl
@@ -71,7 +71,11 @@
 	bottom 0
 
 .modal-dialog .alert.alert--modal-top-alert
-	margin-top -16px;
+	margin-top -16px
+	background-color alpha($color-background, 0.8)
+	color rgba(white, 0.6)
+	& svg.svg-icon
+		fill rgba(white, 0.6)
 
 // lightbox
 .mfp-bg
