--- a/src/styles/colors/dropdowns.styl
+++ b/src/styles/colors/dropdowns.styl
@@ -35,6 +35,13 @@
 		.navbar-nav li > .uib-dropdown-menu
 			background-color $color-navbar
 
+	.comment-dropdown-menu.dropdown-menu
+		background-color $color-light-inv
+		& > li > a
+			color $color-lightish
+			&:hover
+				background-color transparent
+				color $color-lighter
 //
 // Light theme
 // --------------------------------------------------
