--- a/src/styles/dropdowns.styl
+++ b/src/styles/dropdowns.styl
@@ -76,6 +76,12 @@
 		padding-top 1px
 		margin-top -1px
 
+.comment-dropdown-menu
+	font-size $font-size-small
+	border-radius $border-radius-small
+	margin-top 7px
+
+
 // Typography
 .uib-dropdown-menu
 	font-size $font-size-small
