--- a/src/styles/colors/alerts.styl
+++ b/src/styles/colors/alerts.styl
@@ -30,6 +30,10 @@
 		background-color $color-lighter-inv
 		.svg-icon
 			fill $color-lightest
+		a.top-notification
+			color $color-lightest
+			&:hover
+				color white
 	.alert-danger
 		background-color $color-danger-dark
 	.alert-success
