fix: Release sort by name.

--- a/src/app/releases/list/release.list.pug
+++ b/src/app/releases/list/release.list.pug
@@ -159,7 +159,7 @@ include ../../template/_mixins
 		h1 Sort
 		hr
 		ul.list--sort-options
-			li.a(sort="title", sort-default="asc", ng-model="vm.query.sort") Name
+			li.a(sort="name", sort-default="asc", ng-model="vm.query.sort") Name
 			li.a(sort="released_at", sort-default="desc", ng-model="vm.query.sort") Date
 			li.a(sort="rating", sort-default="desc", ng-model="vm.query.sort") Rating
 			li.a(sort="popularity", sort-default="desc", ng-model="vm.query.sort") Popularity
