--- a/src/app/releases/details/vpt/preview/vpt.preview.pug
+++ b/src/app/releases/details/vpt/preview/vpt.preview.pug
@@ -1,1 +1,12 @@
+include ../../../../template/_mixins
+
 #gl-view
+
+.preview-controls
+	.row
+		.col-xs-5.col-xs-offset-1
+			+icon('sun')
+			rzslider(rz-slider-model="vm.scene.globalLightsIntensity", rz-slider-options="vm.scene.globalLightsSliderOptions")
+		.col-xs-5
+			+icon('lightbulb')
+			rzslider(rz-slider-model="vm.scene.bulbLightsIntensity", rz-slider-options="vm.scene.bulbLightsSliderOptions")
