--- a/src/styles/three.styl
+++ b/src/styles/three.styl
@@ -38,6 +38,8 @@
 	right 0
 	height 50px
 	border-top 1px solid $color-primary;
+	@media (max-width: $bootstrap-screen-sm-min)
+		height 120px
 
 .rzslider
 	width 90%
