vpt: Layout fixes and better error handling.

--- a/src/app/releases/details/vpt/preview/vpt.preview.pug
+++ b/src/app/releases/details/vpt/preview/vpt.preview.pug
@@ -74,6 +74,6 @@ include ../../../../template/_mixins
 			.col-xs-10.col-xs-offset-1.col-sm-offset-0.col-sm-5.text-nowrap
 				+icon('lightbulb')
 				rzslider(rz-slider-model="vm.scene.bulbLightsIntensity", rz-slider-options="vm.scene.bulbLightsSliderOptions")
-			.col-sm-1
+			.col-sm-1.hidden-xs
 				a(ng-click="vm.optionsToggled = !vm.optionsToggled")
 					+icon('gear').shift-down
