--- a/src/app/releases/details/release.details.pug
+++ b/src/app/releases/details/release.details.pug
@@ -32,12 +32,12 @@ include ../../template/_mixins
 
 		//-- DOWNLOAD / 3D BUTTON
 		//---------------------------------------------------------------------
-		.text-center: button.btn.btn-primary.padder-top.padder-bottom.text-center(ng-click="vm.download()")
+		.text-center: button.btn.btn-primary.padder-top.padder-bottom.text-center(ng-click="vm.download()", style="width: 65%")
 			+icon('download-circle').space-right.hidden-sm.hidden-md
 			| Download
 
 		.text-center(ng-if="vm.release.versions[0].files[0].file.variations.gltf")
-			button.btn.btn-primary.padder-top.padder-bottom.text-center(ui-sref="vptPreview({gameId: vm.game.id, releaseId: vm.release.id, version: vm.release.versions[0].version, fileId: vm.release.versions[0].files[0].file.id})")
+			button.btn.btn-primary.padder-top.padder-bottom.text-center(ui-sref="vptPreview({gameId: vm.game.id, releaseId: vm.release.id, version: vm.release.versions[0].version, fileId: vm.release.versions[0].files[0].file.id})", style="width: 65%")
 				+icon('cube').space-right.hidden-sm.hidden-md
 				| 3D View
 
