vpt: Add drag & drop support for GLB files.

--- a/src/app/releases/details/vpt/preview/vpt.preview.pug
+++ b/src/app/releases/details/vpt/preview/vpt.preview.pug
@@ -1,6 +1,9 @@
 include ../../../../template/_mixins
 
-.gl-container
+#gl-container(
+		ngf-drop="vm.loadLocalGltf($files)"
+		ngf-drag-over-class="'dragover'"
+	)
 	.info-block(ng-class="{ 'info-block--error': !!vm.errorMessage }", ng-if="!vm.isLoaded")
 		div
 			h3
