--- a/src/styles/three.styl
+++ b/src/styles/three.styl
@@ -19,8 +19,10 @@
 
 @import 'variables';
 
-.gl-container
+#gl-container
 	position relative
+	&.dragover
+		background-color $color-darkest
 
 #gl-view
 	height: 92vh;
