og: Complete original game add form.

--- a/src/app/games/admin/add/game.add.admin.pug
+++ b/src/app/games/admin/add/game.add.admin.pug
@@ -10,7 +10,7 @@ include ./game.add.mixins.pug
 
 		form(role="form")
 
-			+title('1. Enter Title')
+			+title('1. Enter Title', 'The Addams Family', true)
 
 			//-----------------------------------------------------------------
 			h1 2. Origin
