--- a/src/app/games/admin/add/game.add.original.pug
+++ b/src/app/games/admin/add/game.add.original.pug
@@ -29,6 +29,5 @@ include ./game.add.mixins.pug
 
 	.col-sm-3.col--menu
 		h1 &nbsp;
-		p A game is completely decoupled from its releases. So the first thing to do is to add infos about the
-			| game itself.
+		p A game is completely decoupled from its releases. So the first thing to do is to add infos about the game itself.
 		p Look at it as if you were creating your own IPDB entry. The table files are added in the next step.
